Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicdproject-app
  namespace: cicdproject-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cicdproject
  template:
    metadata:
      labels:
        app: cicdproject
    spec:
      containers:
        - name: cicdproject
          image: ilinaa/cicdproject:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/src/main/resources/application-prod.properties
              subPath: application-prod.properties
      volumes:
        - name: config-volume
          configMap:
            name: app-config
