Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicdproject-ingress
  namespace: cicdproject-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cicdproject.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicdproject-app-service
                port:
                  number: 80
